--- a/src/sass/components/_features.scss
+++ b/src/sass/components/_features.scss
@@ -2,44 +2,17 @@
 
 .feature {
 
-    &__icon-box {
-        width: 7.6rem;
-        height: 7.6rem;
-        margin-bottom: 1.8rem;
-    }
-
-    &__title {
-        display: inline-block;
-        background-image: linear-gradient(to right,
-                $color-primary-light, $color-primary-dark);
-        background-clip: text;
-        color: transparent;
-        font-size: 2rem;
-        font-weight: 600;
-        margin-bottom: 1rem;
-        text-align: center;
-    }
-
-    &__text {
-        font-size: 1.6rem;
-        text-align: center;
-        margin-top: 2rem;
-    }
-
-    &__icon {
-        width: 100%;
-    }
-
     &__card {
         display: flex;
         flex-direction: column;
         align-items: center;
-        justify-content: center;
+        justify-content: start;
         background-color: $color-white;
         width: 85%;
         box-shadow: 0 1rem 2rem rgba($color-black, .15);
 
-        padding: 6rem 1.5rem;
+        padding: 0rem 4rem;
+        padding-bottom: 2rem;
         border-radius: .3rem;
 
         transition: all .5s;
@@ -53,7 +26,45 @@
     }
 
     &__card:hover &__title,
-    &__card:hover &__text {
+    &__card:hover &__text,
+    &__card:hover &__icon-box {
         color: $color-white;
+    }
+
+    &__card:hover &__text {
+        font-weight: 500;
+    }
+
+    &__icon-box {
+        $icon-size: 8.5rem;
+        width: $icon-size;
+        height: $icon-size;
+        margin-top: 3rem;
+        margin-bottom: 3.5rem;
+        color: $color-primary;
+
+        &>* {
+            font-size: $icon-size;
+            --ionicon-stroke-width: 16px;
+        }
+    }
+
+    &__title {
+        display: inline-block;
+        background-image: linear-gradient(to right,
+                $color-primary-light, $color-primary-dark);
+        background-clip: text;
+        color: transparent;
+        font-size: 2.1rem;
+        font-weight: 700;
+        margin-bottom: .5rem;
+        text-align: center;
+    }
+
+    &__text {
+        font-size: 1.6rem;
+        line-height: 1.5;
+        text-align: center;
+        margin-top: 2rem;
     }
 }
