--- a/src/css/style.css
+++ b/src/css/style.css
@@ -48,6 +48,20 @@ body {
   font-size: 1.6rem;
 }
 
+.heading-secondary {
+  font-size: 4rem;
+  font-weight: 400;
+  background-image: linear-gradient(to right, #2d302e, #575a58);
+  background-clip: text;
+  color: transparent;
+  border-bottom: 6px solid #4BDE94;
+  padding: 2rem 2.5rem;
+}
+
+.u-margin-bottom {
+  margin-bottom: 3rem;
+}
+
 .hero {
   display: flex;
   align-items: center;
@@ -56,6 +70,8 @@ body {
   background-image: linear-gradient(to right bottom, rgba(75, 222, 148, 0.7), rgba(3, 182, 112, 0.7)), url("../../public/images/hero-large.jpg");
   background-size: cover;
   background-position: center;
+  box-shadow: 0 1rem 2rem rgba(0, 0, 0, 0.2);
+  border-bottom: 1px solid #575a58;
 }
 .hero__box {
   display: flex;
@@ -129,7 +145,7 @@ body {
   grid-row: nav-start/nav-end;
   color: #575a58;
   background-color: rgba(255, 255, 255, 0.98);
-  box-shadow: 0 1rem 2rem rgba(0, 0, 0, 0.1);
+  box-shadow: 0 1rem 2rem rgba(0, 0, 0, 0.2);
   border-bottom: 1px solid #575a58;
 }
 .nav-horizontal__logo-box {
@@ -220,8 +236,19 @@ body {
 .feature__card:hover .feature__title, .feature__card:hover .feature__text, .feature__card:hover .feature__icon-box {
   color: #fff;
 }
-.feature__card:hover .feature__text {
-  font-weight: 500;
+.feature__card:hover .feature__title {
+  background-image: linear-gradient(to right bottom, #ffa45b, #f08822);
+  background-clip: unset;
+  cursor: pointer;
+  box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.15);
+}
+.feature__card:hover .feature__title:hover {
+  transform: translateY(-0.2rem);
+  box-shadow: 0 0.75rem 1.25rem rgba(0, 0, 0, 0.2);
+}
+.feature__card:hover .feature__title:active {
+  transform: translateY(-0.1rem);
+  box-shadow: 0 0.6rem 1.2rem rgba(0, 0, 0, 0.18);
 }
 .feature__icon-box {
   width: 8.5rem;
@@ -240,15 +267,18 @@ body {
   background-clip: text;
   color: transparent;
   font-size: 2.1rem;
-  font-weight: 700;
-  margin-bottom: 0.5rem;
+  font-weight: 800;
+  padding: 1rem 2rem;
+  border-radius: 0.3rem;
   text-align: center;
+  transition: all 0.2s;
 }
 .feature__text {
   font-size: 1.6rem;
   line-height: 1.5;
   text-align: center;
   margin-top: 2rem;
+  font-weight: 500;
 }
 
 .benefit {
@@ -485,20 +515,7 @@ body {
 
 .landing {
   display: grid;
-  grid-template-rows: [nav-start] 7rem [nav-end hero-start] 90vh [hero-end future-start] min-content [future-end benefits-start] minmax(min-content, 50vh) [benefits-end features-start] min-content [features-end testimonials-start] min-content [testimonials-end];
-}
-
-.features {
-  display: grid;
-  justify-items: center;
-  padding: 7rem 0;
-  grid-row: features-start/features-end;
-  grid-template-columns: repeat(auto-fit, minmax(35rem, 1fr));
-  grid-auto-rows: minmax(min-content, 30vh);
-  grid-gap: 2rem;
-  grid-row-gap: 6rem;
-  color: #575a58;
-  background-color: #f1f4f2;
+  grid-template-rows: [nav-start] 7rem [nav-end hero-start] 90vh [hero-end future-start] min-content [future-end benefits-start] minmax(min-content, 60vh) [benefits-end features-start] min-content [features-end testimonials-start] min-content [testimonials-end];
 }
 
 .benefits {
@@ -506,17 +523,43 @@ body {
   align-content: center;
   justify-content: center;
   align-content: stretch;
-  padding: 10rem 12rem 13.5rem 4rem;
-  grid-template-columns: repeat(auto-fit, minmax(35rem, 1fr));
+  box-shadow: 0 1rem 2rem rgba(0, 0, 0, 0.2);
+  border-bottom: 1px solid #575a58;
+  padding: 8rem 12rem 13.5rem 4rem;
+  grid-template-columns: repeat(auto-fit, minmax(45rem, 1fr));
+  grid-template-rows: [heading-start] 6rem [heading-end];
   grid-column-gap: 0rem;
-  grid-row-gap: 0;
-  /* Add row gap only if there's more than one row */
-  background-color: #c3c6c4;
+  grid-row-gap: 9rem;
+  background-color: #dde0de;
   grid-row: benefits-start/benefits-end;
 }
-.benefits:has(.benefit:nth-child(-n+3)) {
-  /* Aplica un row-gap solo si hay 3 elementos o menos */
-  grid-row-gap: 9rem;
+.benefits__heading {
+  grid-row: heading-start/heading-end;
+  grid-column: 1/-1;
+  justify-self: center;
+  align-self: end;
+}
+
+.features {
+  display: grid;
+  justify-items: center;
+  padding: 10rem 0;
+  box-shadow: 0 1rem 2rem rgba(0, 0, 0, 0.2);
+  border-bottom: 1px solid #575a58;
+  grid-row: features-start/features-end;
+  grid-template-columns: repeat(auto-fit, minmax(35rem, 1fr));
+  grid-template-rows: [heading-start] 6rem [heading-end];
+  grid-auto-rows: minmax(min-content, 30vh);
+  grid-gap: 2rem;
+  grid-row-gap: 6rem;
+  color: #575a58;
+  background-color: #f1f4f2;
+}
+.features__heading {
+  grid-row: heading-start/heading-end;
+  grid-column: 1/-1;
+  justify-self: center;
+  align-self: end;
 }
 
 /*# sourceMappingURL=style.css.map */
