--- a/src/css/style.css
+++ b/src/css/style.css
@@ -58,8 +58,8 @@ body {
   padding: 2rem 2.5rem;
 }
 
-.u-margin-bottom {
-  margin-bottom: 3rem;
+.u-margin-bottom-large {
+  margin-bottom: 6rem;
 }
 
 .hero {
@@ -311,7 +311,6 @@ body {
   justify-content: center;
   flex-basis: 100%;
   height: 100%;
-  padding: 10rem 0;
   transition: all 0.4s ease-in;
 }
 .benefit__shape--1.benefit__front-side {
@@ -522,14 +521,15 @@ body {
   display: grid;
   align-content: center;
   justify-content: center;
-  align-content: stretch;
+  align-items: stretch;
   box-shadow: 0 1rem 2rem rgba(0, 0, 0, 0.2);
   border-bottom: 1px solid #575a58;
-  padding: 8rem 12rem 13.5rem 4rem;
+  padding: 16rem 20rem 18.5rem 14rem;
   grid-template-columns: repeat(auto-fit, minmax(45rem, 1fr));
   grid-template-rows: [heading-start] 6rem [heading-end];
   grid-column-gap: 0rem;
   grid-row-gap: 9rem;
+  grid-auto-rows: minmax(min-content, 35vh);
   background-color: #dde0de;
   grid-row: benefits-start/benefits-end;
 }
@@ -543,7 +543,7 @@ body {
 .features {
   display: grid;
   justify-items: center;
-  padding: 10rem 0;
+  padding: 16rem 12rem;
   box-shadow: 0 1rem 2rem rgba(0, 0, 0, 0.2);
   border-bottom: 1px solid #575a58;
   grid-row: features-start/features-end;
