--- a/src/sass/components/_benefit.scss
+++ b/src/sass/components/_benefit.scss
@@ -51,7 +51,7 @@
         justify-content: center;
         flex-basis: 100%;
         height: 100%;
-        padding: 10rem 0;
+        // padding: 10rem 0;
         transition: $shared-transition;
 
         $padding-before-and-after: 6rem;
