Started niche section

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -512,9 +512,52 @@ body {
   border-bottom: none;
 }
 
+.niche-msg {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: start;
+  max-width: 95%;
+  background-color: rgba(255, 255, 255, 0.8);
+  border-radius: 0.3rem;
+}
+.niche-msg__title {
+  padding: 2rem 10%;
+  padding-top: 4rem;
+}
+.niche-msg__text {
+  font-size: 1.7rem;
+  line-height: 1.5;
+  font-weight: 400;
+  color: #2d302e;
+  text-align: center;
+  margin-bottom: 4rem;
+  padding: 2rem 10%;
+}
+
 .landing {
   display: grid;
-  grid-template-rows: [nav-start] 7rem [nav-end hero-start] 90vh [hero-end future-start] min-content [future-end benefits-start] minmax(min-content, 60vh) [benefits-end features-start] min-content [features-end testimonials-start] min-content [testimonials-end];
+  grid-template-rows: [nav-start] 7rem [nav-end hero-start] 90vh [hero-end niche-start] min-content [niche-end benefits-start] minmax(min-content, 60vh) [benefits-end features-start] min-content [features-end testimonials-start] min-content [testimonials-end];
+}
+
+.niche-section {
+  box-shadow: 0 1rem 2rem rgba(0, 0, 0, 0.2);
+  border-bottom: 1px solid #575a58;
+  grid-row: niche-start/niche-end;
+  padding: 10rem 10rem;
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(60rem, 1fr));
+  grid-template-rows: [heading-start] 6rem [heading-end];
+  grid-auto-rows: minmax(min-content, 35vh);
+  grid-column-gap: 15rem;
+  justify-items: center;
+  align-items: stretch;
+}
+.niche-section__heading {
+  grid-row: heading-start/heading-end;
+  grid-column: 1/-1;
+  justify-self: center;
+  align-self: end;
 }
 
 .benefits {
@@ -527,9 +570,9 @@ body {
   padding: 16rem 20rem 18.5rem 14rem;
   grid-template-columns: repeat(auto-fit, minmax(45rem, 1fr));
   grid-template-rows: [heading-start] 6rem [heading-end];
+  grid-auto-rows: minmax(min-content, 35vh);
   grid-column-gap: 0rem;
   grid-row-gap: 9rem;
-  grid-auto-rows: minmax(min-content, 35vh);
   background-color: #dde0de;
   grid-row: benefits-start/benefits-end;
 }
