--- a/src/css/style.css
+++ b/src/css/style.css
@@ -58,11 +58,25 @@ body {
   padding: 2rem 2.5rem;
 }
 
+.heading-tertiary {
+  font-size: 3rem;
+  font-weight: 600;
+  background-image: linear-gradient(to right, #4BDE94, #03B670);
+  background-clip: text;
+  color: transparent;
+}
+
+.u-center-text {
+  text-align: center;
+}
+
 .u-margin-bottom-large {
   margin-bottom: 6rem;
 }
 
 .hero {
+  position: relative;
+  z-index: 10;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -70,7 +84,7 @@ body {
   background-image: linear-gradient(to right bottom, rgba(75, 222, 148, 0.7), rgba(3, 182, 112, 0.7)), url("../../public/images/hero-large.jpg");
   background-size: cover;
   background-position: center;
-  box-shadow: 0 1rem 2rem rgba(0, 0, 0, 0.2);
+  box-shadow: 0 2rem 4rem rgba(0, 0, 0, 0.15);
   border-bottom: 1px solid #575a58;
 }
 .hero__box {
@@ -145,7 +159,7 @@ body {
   grid-row: nav-start/nav-end;
   color: #575a58;
   background-color: rgba(255, 255, 255, 0.98);
-  box-shadow: 0 1rem 2rem rgba(0, 0, 0, 0.2);
+  box-shadow: 0 2rem 4rem rgba(0, 0, 0, 0.15);
   border-bottom: 1px solid #575a58;
 }
 .nav-horizontal__logo-box {
@@ -535,21 +549,41 @@ body {
   padding: 2rem 10%;
 }
 
+.bg-video {
+  position: absolute;
+  top: 0;
+  left: 0;
+  height: 100%;
+  width: 100%;
+  z-index: -1;
+  opacity: 0.15;
+  overflow: hidden;
+}
+.bg-video__content {
+  height: 100%;
+  width: 100%;
+  object-fit: cover;
+}
+
 .landing {
   display: grid;
-  grid-template-rows: [nav-start] 7rem [nav-end hero-start] 90vh [hero-end niche-start] min-content [niche-end benefits-start] minmax(min-content, 60vh) [benefits-end features-start] min-content [features-end testimonials-start] min-content [testimonials-end];
+  grid-template-rows: [nav-start] 7rem [nav-end hero-start] 90vh [hero-end benefits-start] min-content [benefits-end niche-start] minmax(min-content, 60vh) [niche-end features-start] min-content [features-end testimonials-start] min-content [testimonials-end];
 }
 
 .niche-section {
-  box-shadow: 0 1rem 2rem rgba(0, 0, 0, 0.2);
+  position: relative;
+  z-index: 8;
+  box-shadow: 0 2rem 4rem rgba(0, 0, 0, 0.15);
   border-bottom: 1px solid #575a58;
   grid-row: niche-start/niche-end;
-  padding: 10rem 10rem;
+  background-image: linear-gradient(to right bottom, #dde0de, #f1f4f2);
+  padding: 20rem 10rem;
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(60rem, 1fr));
   grid-template-rows: [heading-start] 6rem [heading-end];
   grid-auto-rows: minmax(min-content, 35vh);
   grid-column-gap: 15rem;
+  grid-row-gap: 8rem;
   justify-items: center;
   align-items: stretch;
 }
@@ -561,11 +595,13 @@ body {
 }
 
 .benefits {
+  position: relative;
+  z-index: 9;
   display: grid;
   align-content: center;
   justify-content: center;
   align-items: stretch;
-  box-shadow: 0 1rem 2rem rgba(0, 0, 0, 0.2);
+  box-shadow: 0 2rem 4rem rgba(0, 0, 0, 0.15);
   border-bottom: 1px solid #575a58;
   padding: 16rem 20rem 18.5rem 14rem;
   grid-template-columns: repeat(auto-fit, minmax(45rem, 1fr));
@@ -584,10 +620,12 @@ body {
 }
 
 .features {
+  position: relative;
+  z-index: 7;
   display: grid;
   justify-items: center;
   padding: 16rem 12rem;
-  box-shadow: 0 1rem 2rem rgba(0, 0, 0, 0.2);
+  box-shadow: 0 2rem 4rem rgba(0, 0, 0, 0.15);
   border-bottom: 1px solid #575a58;
   grid-row: features-start/features-end;
   grid-template-columns: repeat(auto-fit, minmax(35rem, 1fr));
